...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/label_name1"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label1"
        app:layout_constraintVertical_bias="0.0" />

    <!--Label #2-->
    <EditText
        android:id="@+id/coordinate1"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/coordinates"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinate1"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/label_name2"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/coordinate2"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/coordinates"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinate2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/label_name3"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label3"
        app:layout_constraintVertical_bias="0.0" />

    <!--Button-->
    <EditText
        android:id="@+id/coordinate3"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/coordinates"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_name3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/burgundy"
        android:onClick="onSubmitClicked"
        android:text="Submit"
        android:textColor="@color/beige"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
...
