...
    android:background="@color/beige"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/compass" />

        <TextView
            android:id="@+id/label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="270"
            android:text="Label #1"
            android:textColor="@color/burgundy"
            android:textSize="20dp"
            app:layout_constraintCircle="@+id/compass"
            app:layout_constraintCircleAngle="270"
            app:layout_constraintCircleRadius="170dp"/>

        <TextView
            android:id="@+id/label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:text="Label #2"
            android:textColor="@color/burgundy"
            android:textSize="20dp"
            app:layout_constraintCircle="@+id/compass"
            app:layout_constraintCircleAngle="180"
            app:layout_constraintCircleRadius="170dp"/>

        <TextView
            android:id="@+id/label_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="0"
            android:text="Label #3"
            android:textColor="@color/burgundy"
            android:textSize="20dp"
...
